--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   "homepage": "https://github.com/guilhermefaj/projeto14-mywallet-back#readme",
   "dependencies": {
     "axios": "^1.3.5",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "joi": "^17.9.1",
-    "mongodb": "^5.2.0"
+    "mongodb": "^5.2.0",
+    "uuid": "^9.0.0"
   }
 }
